# SPOBX8Edit

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Info.plist.in  LICENSE  README.md  create_bundle.sh  install.sh
src/: midi_device_manager.cpp  midi_device_manager.h  midi_handler.cpp  midi_handler.h  obx8_parameters.cpp  obx8_parameters.h  obx8_plugin.cpp  obx8_plugin.h  plugin_entry.cpp
